2003-09-24  Alasdair Allan <aa@astro.ex.ac.uk>

        * Query/Query/SIMBAD.pm: Removed debugging statements which 
          generated a file containing a copy of the retrieved HTML in 
          the current working directory.
               
        * etc/sss.cfg: Added SkyCat SuperCOSMOS configuration file to 
          default distribution
        
        * etc/skycat.cfg: Added generic SkyCat configuration file to 
          default distribution   

        * Query/Query/SkyCat.pm: Updated to look for $PERLPREFIX/etc/skycat.cfg
          configuration file by default.
               
        * Makefile.PL: Modified makefile to install the SkyCat configuration
          files to $(PERLPREFIX)/etc in preperation for shifting access to
          SuperCOSMOS from being dependant on Astro::Aladin to using the
          Astro::Catalog::Query::SkyCat module. 
          
        * Query/Query/SuperCOSMOS.pm: Totally reimplemented this module
          from scratch to use the SkyCat.pm module rather than relying
          on the Astro::Aladin implementation. 

        * t/4_skycat_supercos.t: Added a test suite for the new SuperCOSMOS
          module. This superceedes the older 4_supercos.t test suite.

        * MANIFEST: Updated to reflect the actual package, we've been shipping
          V3.x with bits missing since release, whoops!
        
        * old/*: Moved some of the non-functional test suite into a this
          directory along with the old Astro::Aladin SuperCOSMOS module. 
           
2003-09-24  Alasdair Allan <aa@astro.ex.ac.uk>

        * Query/Query/CMC.pm: Added a Vizier Carlsberg Meridian Catalogue
          (CMC/11) query sub-class to try and figure out how Tim had written 
          the 2MASS (Vizier generic) class. RA & Dec incorrect.

        * Query/Query/2MASS.pm: Moved colour generation for 2MASS catalogue
          from the more generic IO/TST.pm module.
        
        * IO/TST.pm: See changes to Query/Query/2MASS.pm
        